k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eurotunnel-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: app-instance
    app.kubernetes.io/name: app
  ports:
  - port: 80
    targetPort: 3000
