k8s/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: eurotunnel-app
spec:
  to:
    kind: Service
    name: eurotunnel-app
